UiImageCropper: fix positioning and crop calculation

--- a/teamapps-client/less/components/UiImageCropper.less
+++ b/teamapps-client/less/components/UiImageCropper.less
@@ -24,6 +24,8 @@
   justify-content: space-around;
   overflow: hidden;
   position: relative;
+  user-select: none;
+  background-color: #777;
 
   img {
     display: inline-block;
